--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "sec_tool",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "xi4f3i <xi4f3i@gmail.com>",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^24.0.10",
+    "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "cheerio": "^1.1.0",
+    "puppeteer": "^24.11.2"
+  }
 }
