--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sec_tool",
   "version": "1.0.0",
   "type": "module",
-  "main": "1.js",
+  "main": "report_parser.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "cheerio": "^1.1.0",
-    "puppeteer": "^24.11.2"
+    "compromise": "^14.14.4",
+    "puppeteer": "^24.11.2",
+    "syllable": "^5.0.1"
   }
 }
